# docs/swagger.yaml
@@ -273,6 +273,100 @@ definitions:
     required:
     - name
     type: object
+  transaction.CreateTransactionCartItemsDTO:
+    properties:
+      id:
+        example: 769dee9f-1745-4419-87d3-bd3608ac36db
+        type: string
+      price:
+        example: 100000
+        type: number
+      product_id:
+        example: 0723074e-5c4b-4c4c-9073-e4f028cbd2f8
+        type: string
+      quantity:
+        example: 1
+        type: integer
+    required:
+    - id
+    - price
+    - product_id
+    - quantity
+    type: object
+  transaction.CreateTransactionDTO:
+    properties:
+      cart_items:
+        items:
+          $ref: '#/definitions/transaction.CreateTransactionCartItemsDTO'
+        type: array
+    required:
+    - cart_items
+    type: object
+  transaction.SuccessCreateTransactionResponse:
+    properties:
+      data:
+        $ref: '#/definitions/transaction.Transaction'
+      message:
+        example: success
+        type: string
+    type: object
+  transaction.Transaction:
+    properties:
+      created_at:
+        example: "2024-07-16T23:13:03.115483+07:00"
+        type: string
+      customer:
+        $ref: '#/definitions/models.User'
+      customer_id:
+        example: 7c08adb6-a702-45c5-99b7-1b33868c0e01
+        type: string
+      deleted_at:
+        example: "null"
+        type: string
+      id:
+        example: ab7ac1cb-17c6-4e9a-8cd8-d51d8988c5ec
+        type: string
+      payment_status:
+        type: string
+      total_price:
+        type: number
+      transaction_cart_items:
+        items:
+          $ref: '#/definitions/transaction.TransactionCartItems'
+        type: array
+      updated_at:
+        example: "2024-07-16T23:13:03.115483+07:00"
+        type: string
+    type: object
+  transaction.TransactionCartItems:
+    properties:
+      cart_item:
+        $ref: '#/definitions/cart_items.CartItems'
+      cart_item_id:
+        example: 7c08adb6-a702-45c5-99b7-1b33868c0e02
+        type: string
+      created_at:
+        example: "2024-07-16T23:13:03.115483+07:00"
+        type: string
+      deleted_at:
+        example: "null"
+        type: string
+      id:
+        example: ab7ac1cb-17c6-4e9a-8cd8-d51d8988c5ec
+        type: string
+      price:
+        example: 100000
+        type: number
+      quantity:
+        example: 1
+        type: integer
+      transaction_id:
+        example: 7c08adb6-a702-45c5-99b7-1b33868c0e01
+        type: string
+      updated_at:
+        example: "2024-07-16T23:13:03.115483+07:00"
+        type: string
+    type: object
   users.BadRequestLoginResponse:
     properties:
       error:
@@ -739,4 +833,30 @@ paths:
       summary: Update role by ID
       tags:
       - role
+  /transaction:
+    post:
+      description: Create transaction
+      parameters:
+      - description: Create transaction
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/transaction.CreateTransactionDTO'
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/transaction.SuccessCreateTransactionResponse'
+      summary: Create transaction
+      tags:
+      - transaction
 swagger: "2.0"
