# modules/transaction/response/create-transaction.go
@@ -1,0 +1,8 @@
+package transaction
+
+import models "online-shop-home-test/modules/transaction/models"
+
+type SuccessCreateTransactionResponse struct {
+	Data    models.Transaction `json:"data"`
+	Message string             `json:"message" example:"success"`
+}
